--- a/right_sm_bottom.html
+++ b/right_sm_bottom.html
@@ -14,13 +14,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <title>
-        Left Big Img
+        Right Small Bottom
     </title>
 </head>
 
 <body>
     <div class="message">
-        <h2>This is "Big Left" page.</h2>
+        <h2>This is "Right Small Bottom" page.</h2>
     </div>
 </body>
 
