--- a/Home_Bottom.html
+++ b/Home_Bottom.html
@@ -90,8 +90,6 @@
                 <br>
                 <!-- 지도를 표시할 div 입니다 -->
                 <div id="map" style="width:100%;height:350px"></div>
-                <!-- 로드뷰를 표시할 div 입니다  <div id="roadview" style="width:100%;height:300px"></div> -->
-                <!--<img class="media-object" width="300pt" src="./chick.png" />-->
 
             </div>
             <div class="col-md-7">
@@ -107,7 +105,7 @@
                                     <a href="big_left.html">
                                         <img class="media-object" width="350pt" height="150pt" src="./night.jpg" />
                                         <br>
-                                        <h4 class="media-heading">들어보라 청춘의</h4>
+                                        <h4 class="media-heading">왼쪽 BIG 컨텐츠</h4>
                                         <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
                                         <br>
                                     </a>
@@ -115,23 +113,27 @@
                             </li>
 
                             <li class="media-top">
-                                <div class="media-left">
-                                    <img class="media-object img-responsive" width="120pt" src="./chick.png" />
-                                </div>
-                                <div class="media-right">
-                                    <h4 class="media-heading">들어보라 청춘의</h4>
-                                    <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
-                                </div>
+                                <a href="left_sm_top.html">
+                                    <div class="media-left">
+                                        <img class="media-object img-responsive" width="120pt" src="./chick.png" />
+                                    </div>
+                                    <div class="media-right">
+                                        <h4 class="media-heading">왼쪽 TOP 컨텐츠</h4>
+                                        <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
+                                    </div>
+                                </a>
                             </li>
                             <br><br>
                             <li class="media-bottom">
-                                <div class="media-left">
-                                    <img class="media-object img-responsive" width="120pt" src="./chick.png" />
-                                </div>
-                                <div class="media-right">
-                                    <h4 class="media-heading">들어보라 청춘의</h4>
-                                    <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
-                                </div>
+                                <a href="left_sm_bottom.html">
+                                    <div class="media-left">
+                                        <img class="media-object img-responsive" width="120pt" src="./chick.png" />
+                                    </div>
+                                    <div class="media-right">
+                                        <h4 class="media-heading">왼쪽 BOTTOM 컨텐츠</h4>
+                                        <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
+                                    </div>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -143,30 +145,34 @@
                                     <a href="big_right.html">
                                         <img class="media-object" width="350pt" height="150pt" src="./cusco.jpg" />
                                         <br>
-                                        <h4 class="media-heading">들어보라 청춘의</h4>
+                                        <h4 class="media-heading">오른쪽 BIG 컨텐츠</h4>
                                         <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
                                         <br>
                                     </a>
                                 </div>
                             </li>
                             <li class="media-top">
-                                <div class="media-left">
-                                    <img class="media-object img-responsive" width="120pt" src="./chick.png" />
-                                </div>
-                                <div class="media-right">
-                                    <h4 class="media-heading">들어보라 청춘의</h4>
-                                    <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
-                                </div>
+                                <a href="right_sm_top.html">
+                                    <div class="media-left">
+                                        <img class="media-object img-responsive" width="120pt" src="./chick.png" />
+                                    </div>
+                                    <div class="media-right">
+                                        <h4 class="media-heading">오른쪽 TOP 컨텐츠</h4>
+                                        <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
+                                    </div>
+                                </a>
                             </li>
                             <br><br>
                             <li class="media-bottom">
-                                <div class="media-left">
-                                    <img class="media-object img-responsive" width="120pt" src="./chick.png" />
-                                </div>
-                                <div class="media-right">
-                                    <h4 class="media-heading">들어보라 청춘의</h4>
-                                    <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
-                                </div>
+                                <a href="right_sm_bottom.html">
+                                    <div class="media-left">
+                                        <img class="media-object img-responsive" width="120pt" src="./chick.png" />
+                                    </div>
+                                    <div class="media-right">
+                                        <h4 class="media-heading">오른쪽 BOTTOM 컨텐츠</h4>
+                                        <p>그것을 보는 때에 그것을 보는 때에 그것을 보는 때에 그것을 보는 때에</p>
+                                    </div>
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -174,71 +180,112 @@
             </div>
         </div>
     </div>
-</body>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=33b43b8c55df51457146dbecfe35bc57"></script>
-<script>
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-        mapCenter = new kakao.maps.LatLng(33.5563, 126.7958), // 지도의 중심좌표
-        mapOption = {
-            center: mapCenter, // 지도의 중심좌표
-            level: 3 // 지도의 확대 레벨
-        };
 
-    var map = new kakao.maps.Map(mapContainer, mapOption);
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=33b43b8c55df51457146dbecfe35bc57"></script>
+    <script>
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+            mapCenter = new kakao.maps.LatLng(33.5563, 126.7958), // 지도의 중심좌표
+            mapOption = {
+                center: mapCenter, // 지도의 중심좌표
+                level: 7 // 지도의 확대 레벨
+            };
 
-    // 커스텀 오버레이에 표시할 내용입니다
-    // HTML 문자열 또는 Dom Element 입니다
-    var content = '<div class="overlay_info">';
-    content += '    <a href="https://place.map.kakao.com/17600274" target="_blank"><strong>월정리 해수욕장</strong></a>';
-    content += '    <div class="desc">';
-    content += '        <img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_thumb.png" alt="">';
-    content += '        <span class="address">제주특별자치도 제주시 구좌읍 월정리 33-3</span>';
-    content += '    </div>';
-    content += '</div>';
+        var map = new kakao.maps.Map(mapContainer, mapOption); //지도 생성
 
-    // 커스텀 오버레이가 표시될 위치입니다 
-    var position = new kakao.maps.LatLng(33.55635, 126.795841);
+        // 커스텀 오버레이에 표시할 내용입니다
+        // HTML 문자열 또는 Dom Element 입니다
+        var content = '<div class="overlay_info">';
+        content += '    <a href="https://place.map.kakao.com/17600274" target="_blank"><strong>월정리 해수욕장</strong></a>';
+        content += '    <div class="desc">';
+        content += '        <img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_thumb.png" alt="">';
+        content += '        <span class="address">제주특별자치도 제주시 구좌읍 월정리 33-3</span>';
+        content += '    </div>';
+        content += '</div>';
 
-    // 커스텀 오버레이를 생성합니다
-    var mapCustomOverlay = new kakao.maps.CustomOverlay({
-        position: position,
-        content: content,
-        xAnchor: 0.5, // 커스텀 오버레이의 x축 위치입니다. 1에 가까울수록 왼쪽에 위치합니다. 기본값은 0.5 입니다
-        yAnchor: 1.1 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
-    });
+        var content2 = '<div class="overlay_info">';
+        content2 += '    <a href="https://place.map.kakao.com/27583373" target="_blank"><strong>월정리 카페거리</strong></a>';
+        content2 += '    <div class="desc">';
+        content2 += '        <img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_thumb.png" alt="">';
+        content2 += '        <span class="address">제주특별자치도 제주시 구좌읍 월정리 652-4</span>';
+        content2 += '    </div>';
+        content2 += '</div>';
 
-    // 커스텀 오버레이를 지도에 표시합니다
-    mapCustomOverlay.setMap(map);
-
-    var rvContainer = document.getElementById('roadview'); //로드뷰를 표시할 div
-    var rv = new kakao.maps.Roadview(rvContainer); //로드뷰 객체
-    var rvClient = new kakao.maps.RoadviewClient(); //좌표로부터 로드뷰 파노ID를 가져올 로드뷰 helper객체
-
-    //지도의 중심좌표와 가까운 로드뷰의 panoId를 추출하여 로드뷰를 띄운다.
-    rvClient.getNearestPanoId(mapCenter, 50, function(panoId) {
-        rv.setPanoId(panoId, mapCenter); //panoId와 중심좌표를 통해 로드뷰 실행
-    });
-
-    kakao.maps.event.addListener(rv, 'init', function() {
+        // 커스텀 오버레이가 표시될 위치입니다 
+        var position = new kakao.maps.LatLng(33.55635, 126.795841);
 
         // 커스텀 오버레이를 생성합니다
-        var rvCustomOverlay = new kakao.maps.CustomOverlay({
+        var mapCustomOverlay = new kakao.maps.CustomOverlay({
             position: position,
             content: content,
             xAnchor: 0.5, // 커스텀 오버레이의 x축 위치입니다. 1에 가까울수록 왼쪽에 위치합니다. 기본값은 0.5 입니다
-            yAnchor: 0.5 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
+            yAnchor: 1.1 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
         });
 
-        //rvCustomOverlay.setAltitude(2); //커스텀 오버레이의 고도값을 설정합니다.(로드뷰 화면 중앙이 0입니다)
-        rvCustomOverlay.setMap(rv);
+        // 커스텀 오버레이를 지도에 표시합니다
+        mapCustomOverlay.setMap(map);
 
-        var projection = rv.getProjection(); // viewpoint(화면좌표)값을 추출할 수 있는 projection 객체를 가져옵니다.
+        var position2 = new kakao.maps.LatLng(33.55555, 126.796533);
 
-        // 커스텀오버레이의 position과 altitude값을 통해 viewpoint값(화면좌표)를 추출합니다.
-        var viewpoint = projection.viewpointFromCoords(rvCustomOverlay.getPosition(), rvCustomOverlay.getAltitude());
+        var mapCustomOverlay2 = new kakao.maps.CustomOverlay({
+            position: position2,
+            content: content2,
+            xAnchor: 0.5, // 커스텀 오버레이의 x축 위치입니다. 1에 가까울수록 왼쪽에 위치합니다. 기본값은 0.5 입니다
+            yAnchor: 1.1 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
+        });
 
-        rv.setViewpoint(viewpoint); //커스텀 오버레이를 로드뷰의 가운데에 오도록 로드뷰의 시점을 변화 시킵니다.
-    });
-</script>
+        // 커스텀 오버레이를 지도에 표시합니다
+        mapCustomOverlay2.setMap(map);
+
+        // HTML5의 geolocation으로 사용할 수 있는지 확인합니다 
+        if (navigator.geolocation) {
+
+            // GeoLocation을 이용해서 접속 위치를 얻어옵니다
+            navigator.geolocation.getCurrentPosition(function(position) {
+
+                var lat = position.coords.latitude, // 위도
+                    lon = position.coords.longitude; // 경도
+
+                var locPosition = new kakao.maps.LatLng(lat, lon), // 마커가 표시될 위치를 geolocation으로 얻어온 좌표로 생성합니다
+                    message = '<div style="padding:5px;">여기에 계신가요?!</div>'; // 인포윈도우에 표시될 내용입니다
+
+                // 마커와 인포윈도우를 표시합니다
+                displayMarker(locPosition, message);
+
+            });
+
+        } else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
+
+            var locPosition = new kakao.maps.LatLng(33.450701, 126.570667),
+                message = 'geolocation을 사용할수 없어요..'
+
+            displayMarker(locPosition, message);
+        }
+
+        // 지도에 마커와 인포윈도우를 표시하는 함수입니다
+        function displayMarker(locPosition, message) {
+
+            // 마커를 생성합니다
+            var marker = new kakao.maps.Marker({
+                map: map,
+                position: locPosition
+            });
+
+            var iwContent = message, // 인포윈도우에 표시할 내용
+                iwRemoveable = true;
+
+            // 인포윈도우를 생성합니다
+            var infowindow = new kakao.maps.InfoWindow({
+                content: iwContent,
+                removable: iwRemoveable
+            });
+
+            // 인포윈도우를 마커위에 표시합니다 
+            infowindow.open(map, marker);
+
+            // 지도 중심좌표를 접속위치로 변경합니다
+            map.setCenter(locPosition);
+        }
+    </script>
+</body>
 
 </html>
