--- a/left_sm_top.html
+++ b/left_sm_top.html
@@ -14,13 +14,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <title>
-        Left Big Img
+        Left Small Top
     </title>
 </head>
 
 <body>
     <div class="message">
-        <h2>This is "Big Left" page.</h2>
+        <h2>This is "Left Small Top" page.</h2>
     </div>
 </body>
 
