--- a/WebContents/Home.html
+++ b/WebContents/Home.html
@@ -8,17 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="/resource/css/bootstrap.css"> -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./resourse/css/imageslide.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <!-- JS -->
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <title>Home</title>
+    <title>Hello, world!</title>
 </head>
 
 <body>
@@ -39,7 +32,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="TouristSpot.html">여행지 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">여행지 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">축제</a>
@@ -64,35 +57,7 @@
             </ul>
         </div>
     </nav>
-
-    <!-- Swiper -->
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <div class="gallbox">
-                    <img src="./image/image1.jpg" alt="">
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image2.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image3.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image4.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image5.jpg" alt="">
-            </div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
-
+    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -101,10 +66,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="./resourse/js/swiper.controller.js"></script>
 </body>
 <style>
-
 </style>
-
 </html>
