커밋 오류로 재커밋

--- a/WebContents/Events.html
+++ b/WebContents/Events.html
@@ -8,17 +8,12 @@
 
     <!-- Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="/resource/css/bootstrap.css"> -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./resourse/css/imageslide.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- JS -->
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <title>Home</title>
+    <title>Events</title>
 </head>
 
 <body>
@@ -67,41 +62,14 @@
         </div>
     </nav>
 
-    <!-- Swiper -->
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img src="./image/image1.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image2.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image3.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image4.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="./image/image5.jpg" alt="">
-            </div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-    </div>
-
-
-    <!-- Optional JavaScript -->
+    <h1>여행지</h1>
+        <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="./resourse/js/swiper.controller.js"></script>
 </body>
 
 </html>
