파일경로 수정

--- a/WebContents/HTML/Events.html
+++ b/WebContents/HTML/Events.html
@@ -13,13 +13,13 @@
 
     <!-- JS -->
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>Festival</title>
+    <title>Events</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="Home.html">
-            <img src="./image/page_logo.png" width="50" height="50" alt="">
+            <img src="../image/page_logo.png" width="50" height="50" alt="">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
-    <h1>축제</h1>
+    <h1>이벤트</h1>
         <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
