--- a/WebContents/HTML/Festival.html
+++ b/WebContents/HTML/Festival.html
@@ -13,13 +13,13 @@
 
     <!-- JS -->
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
-    <title>Events</title>
+    <title>Festival</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="Home.html">
-            <img src="./image/page_logo.png" width="50" height="50" alt="">
+            <img src="../image/page_logo.png" width="50" height="50" alt="">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,9 @@
         </div>
     </nav>
 
-    <h1>여행지</h1>
+    <div class="col-md-3">
+        <h1>축제</h1>
+    </div>
         <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -72,4 +74,15 @@
         crossorigin="anonymous"></script>
 </body>
 
+<style>
+    .col-md-3{
+        border-bottom: 2px solid black;
+        margin: 10px;
+        padding: 10px;
+    }
+    .container{
+        margin: 10px;
+        padding: 10px;
+    }
+</style>
 </html>
