--- a/WebContents/HTML/Home.html
+++ b/WebContents/HTML/Home.html
@@ -18,13 +18,14 @@
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    
     <title>Home</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="Home.html">
-            <img src="./image/page_logo.png" width="50" height="50" alt="">
+            <img src="../image/page_logo.png" width="50" height="50" alt="">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,19 +72,19 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="./image/image1.jpg" alt="">
+                <img src="../image/image1.jpg">
             </div>
             <div class="swiper-slide">
-                <img src="./image/image2.jpg" alt="">
+                <img src="../image/image2.jpg">
             </div>
             <div class="swiper-slide">
-                <img src="./image/image3.jpg" alt="">
+                <img src="../image/image3.jpg">
             </div>
             <div class="swiper-slide">
-                <img src="./image/image4.jpg" alt="">
+                <img src="../image/image4.jpg">
             </div>
             <div class="swiper-slide">
-                <img src="./image/image5.jpg" alt="">
+                <img src="../image/image5.jpg">
             </div>
         </div>
         <!-- Add Pagination -->
@@ -101,7 +102,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="./resourse/js/swiper.controller.js"></script>
+        <script src="../resourse/js/swiper.controller.js"></script>
 </body>
 
 </html>
