--- a/WebContents/HTML/TouristSpot.html
+++ b/WebContents/HTML/TouristSpot.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="Home.html">
-            <img src="./image/page_logo.png" width="50" height="50" alt="">
+            <img src="../image/page_logo.png" width="50" height="50" alt="">
         </a>
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,14 +62,78 @@
         </div>
     </nav>
 
-    <h1>여행지</h1>
-        <!-- Optional JavaScript -->
+    <div class="col-md-3">
+        <h1>여행지</h1>
+    </div>
+
+    <div class="container">
+        <h3>지역</h3>
+        <div class="btn-group-justified" role="group" aria-label="...">
+            <button type="button" class="btn btn-outline-secondary">서울</button>
+            <button type="button" class="btn btn-outline-secondary">인천</button>
+            <button type="button" class="btn btn-outline-secondary">대전</button>
+            <button type="button" class="btn btn-outline-secondary">대구</button>
+            <button type="button" class="btn btn-outline-secondary">광주</button>
+            <button type="button" class="btn btn-outline-secondary">부산</button>
+            <button type="button" class="btn btn-outline-secondary">울산</button>
+            <button type="button" class="btn btn-outline-secondary">세종</button>
+            <button type="button" class="btn btn-outline-secondary">경기</button>
+        </div>
+        <div class="btn-group-justified" role="group" aria-label="...">
+            <button type="button" class="btn btn-outline-secondary">강원</button>
+            <button type="button" class="btn btn-outline-secondary">충북</button>
+            <button type="button" class="btn btn-outline-secondary">충남</button>
+            <button type="button" class="btn btn-outline-secondary">경북</button>
+            <button type="button" class="btn btn-outline-secondary">경남</button>
+            <button type="button" class="btn btn-outline-secondary">전북</button>
+            <button type="button" class="btn btn-outline-secondary">전남</button>
+            <button type="button" class="btn btn-outline-secondary">제주</button>
+            <button type="button" class="btn btn-outline-secondary">전체보기</button>
+        </div>
+    </div>
+    
+    <div class="container">
+        <h3>여행테마</h3>
+        <div>
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+        </div>
+    </div>
+
+    <div class="container">
+        <h3>인기 여행지</h3>
+        <div>
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+            <img src="https://via.placeholder.com/150" alt="">
+        </div>
+    </div>
+    <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+
 </body>
+<style>
+    .col-md-3{
+        border-bottom: 2px solid black;
+        margin: 10px;
+        padding: 10px;
+    }
+    .container{
+        margin: 10px;
+        padding: 10px;
+    }
+</style>
 
 </html>
